--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: monospace;
+    font-family: "monospace";
     box-sizing: border-box;
+}
+
+#topo {
+    background-color: black;
 }
 
 #topo p {
     text-align: center;
     padding: 3px;
+    color: thistle;
 }
 
 header {
@@ -28,7 +33,7 @@ header p {
     border-right: 2px solid rgba(240, 248, 255, 0.616);
     color: aliceblue;
     font-weight: bolder;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     text-align: center;
     margin: 0 auto;
     white-space: nowrap;
@@ -45,7 +50,7 @@ header p {
         width: 0;
     }
     to{
-        width: 70%;
+        width: 65%;
     }
 }
 
@@ -59,11 +64,11 @@ header p {
 }
 
 header img {
-    width: 90%;
+    max-width: 70%;
 }
 
 body {
-    background-image: linear-gradient(to bottom, rgb(215, 119, 244), rgb(27, 78, 161));
+    background-image: linear-gradient(to bottom, #291f38, #17131d);
     height: 100vh;
 }
 
@@ -76,10 +81,42 @@ button {
     margin-top: 50px;
     padding: 20px 40px;
     border: none;
-    background-image: linear-gradient(to bottom, rgb(16, 6, 26), rgb(42, 13, 70));
+    background-image: linear-gradient(to bottom, rgb(117, 53, 69), rgb(10, 14, 32));
     color: white;
     font-weight: bolder;
     font-size: 1.5rem;
     text-transform: uppercase;
     box-shadow: 5px 8px 0.9px rgba(0, 0, 0, 0.87);
+    transition: 300ms;
+}
+
+button a {
+    color: white;
+    text-decoration: none;
+}
+
+@media screen and (min-width: 1024px)  {
+    body {
+        width: 70%;
+        margin: auto;
+    }
+
+    @keyframes typing {
+        from{
+            width: 0;
+        }
+        to{
+            width: 20vw;
+        }
+    }
+
+    header p {
+        font-size: 1.5rem;
+    }
+
+    button:hover {
+        cursor: pointer;
+        padding: 50px 20px;
+        border-radius: 18px;
+    }
 }
