--- a/jogar/styleJogar.css
+++ b/jogar/styleJogar.css
@@ -20,15 +20,19 @@
 
 header {
     text-align: center;
+    padding: 40px 0px;
+    background-image: url(../imgs/fundojogar.jpg);
+    background-position: center center;
+    background-size: cover;
 }
 
 
 header img {
-    max-width: 50%;
+    max-width: 30%;
 }
 
 body {
-    background-image: linear-gradient(to bottom, #291f38, #17131d);
+    background-image: linear-gradient(to bottom, #543e75, #17131d);
     background-attachment: fixed;
     height: 100vh;
 }
@@ -54,26 +58,35 @@ main {
 }
 
 main img {
-    max-width: 90%;
-    border-radius: 40px;
+    max-width: 70%;
+    border-radius: 10px;
     filter: grayscale(80%);
 }
 
 .escolhido img {
     filter: none;
+    border-radius: 50%;
 }
 
 .resultado {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    text-align: center;
+    align-items: center;
 }
 
 .resultado img {
-    width: 95%;
+    width: 90%;
+}
+
+
+#vencedor img {
+    border-radius: 30px;
 }
 
 #perdedor img {
     filter: blur(2px);
+    width: 65%;
 }
 
 #resfinal p {
@@ -87,6 +100,24 @@ main img {
     width: 30px;
 }
 
+button {
+    margin-top: 50px;
+    padding: 20px 40px;
+    border: none;
+    background-image: linear-gradient(to bottom, rgb(117, 53, 69), rgb(10, 14, 32));
+    color: white;
+    font-weight: bolder;
+    font-size: 1rem;
+    text-transform: uppercase;
+    box-shadow: 5px 8px 0.9px rgba(0, 0, 0, 0.87);
+    transition: 300ms;
+}
+
+button a {
+    color: white;
+    text-decoration: none;
+}
+
 
 @media screen and (min-width: 1024px)  {
     header img {
@@ -94,16 +125,30 @@ main img {
     }
     
     body {
-        width: 70%;
+        width: 60%;
         margin: auto;
     }
 
     main img {
-        width: 100%;
+        width: 30%;
+    }
+
+    #perdedor img {
+        width: 35%;
     }
 
     #resfinal {
         padding-bottom: 100px;
+    }
+
+    .resultado img {
+        width: 50%;
+    }
+
+    button:hover {
+        cursor: pointer;
+        border-radius: 25px;
+        background-image: linear-gradient(to bottom, rgb(185, 107, 126), rgb(35, 50, 92));
     }
 
 }
