--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
-    font-family: "monospace";
+    font-family: "Silkscreen";
     box-sizing: border-box;
 }
 
@@ -33,7 +35,7 @@ header p {
     border-right: 2px solid rgba(240, 248, 255, 0.616);
     color: aliceblue;
     font-weight: bolder;
-    font-size: 1.3rem;
+    font-size: .8rem;
     text-align: center;
     margin: 0 auto;
     white-space: nowrap;
@@ -68,7 +70,7 @@ header img {
 }
 
 body {
-    background-image: linear-gradient(to bottom, #291f38, #17131d);
+    background-image: linear-gradient(to bottom, #543e75, #17131d);
     height: 100vh;
 }
 
@@ -111,12 +113,12 @@ button a {
     }
 
     header p {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
 
     button:hover {
         cursor: pointer;
-        padding: 50px 20px;
-        border-radius: 18px;
+        border-radius: 25px;
+        background-image: linear-gradient(to bottom, rgb(185, 107, 126), rgb(35, 50, 92));
     }
 }
